[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "subregsim"
version = "0.6.0"
description = "Simple Subreg.cz API simulator"
readme = "README.md"
requires-python = ">=3.13"
license = "BSD-2-Clause"
authors = [
  { name = "Oldřich Jedlička", email = "oldium.pro@gmail.com" },
]
keywords = ["subreg", "api", "simulator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "configargparse>=1.7.5",
  "dnslib>=0.9.26",
  "lxml>=6.0.2",
  "spyne>=2.14.0",
]

[project.scripts]
subregsim = "subregsim.__main__:run"

[project.urls]
Homepage = "https://github.com/oldium/subregsim"
Issues = "https://github.com/oldium/subregsim/issues"
Source = "https://github.com/oldium/subregsim"

[tool.hatch.build.targets.sdist]
include = [
  "/subregsim",
  "/LICENSE.txt",
  "/README.md",
  "/subregsim.conf.example",
]

[tool.hatch.build.targets.wheel]
packages = ["subregsim"]

